--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,8 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Développeuse web en reconversion, recherche un stage en développement front et back-end. Découvrez mon CV et mes compétences.">
+        <meta name="keywords" content="Développeur web, Développeuse web, Stage, Frontend, Backend, PHP, JavaScript">  
+        <title>{% block title %}Code by Aurore{% endblock %}</title>
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/components.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
         {% block stylesheets %}
         {% endblock %}
 
@@ -12,12 +18,31 @@
         {% endblock %}
     </head>
     <body>
-        <nav>
-            <ul>
-                <li><a href="{{ path('articles_list')}}">Liste des articles</a></li>
-                <li><a href="{{ path('articles_create')}}">Créer un article</a></li>
-            </ul>
-        </nav>
-        {% block body %}{% endblock %}
+        <header class="navbar">
+            <div class="container">
+              <a class="logo">
+              <img src="images/logo AL dark.png" alt="Logo aurore le perff" loading="lazy" style="height: 60px;">
+              </a>
+              <button class="burger" aria-label="Menu">
+              <span></span>
+              <span></span>
+              <span></span>
+              </button>
+              <nav class="nav-menu">
+                    <ul>
+                        <li><a class="{{ app.current_route == 'home' ? 'active' : ''}}" href="{{ path('home')}}">Accueil</a></li>
+                        <li><a class="{{ app.current_route == 'article.' ? 'active' : '' }}" href="{{ path('article.index')}}">Blog</a></li>
+                        <li><a href="#experience">à propos</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <main>
+            <div class="container">
+                {% block body %}{% endblock %}
+            </div>
+        </main>
+        <script src="js/script.js"></script>
     </body>
 </html>
