--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -2,14 +2,26 @@
 
 {% block body %}
    <div class="container">
-      <h2>Ajouter un article</h2>
+      <h2>Modifier l'article</h2>
 
-      {{ form_row(form.title) }}
+      {{ include('partials/_flash_messages.html.twig') }}
 
-      {{ form_row(form.slug) }}
-  
-      {{ form_row(form.content) }}
+      <form method="post" action="{{ path('article.edit', {id: article.id}) }}">
+
+         {{ form_start(form) }}
+
+         {{ form_row(form.title) }}
+         {{ form_row(form.slug) }}
+         {{ form_row(form.content) }}
+         {{ form_row(form.category) }}
+         {{ form_row(form.published_at) }}
+         {{ form_row(form.save, { 'label': 'Modifier l\'article' }) }}
+
+         {{ form_row(form._token) }}
+
+         {{ form_end(form) }}
+
+      </form>
 
    </div>
-
 {% endblock %}
