--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,6 +40,7 @@
         </header>
         <main>
             <div class="container">
+                {% include 'partials/_flash_messages.html.twig' %}
                 {% block body %}{% endblock %}
             </div>
         </main>
