--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,5 +2,247 @@
 
 
 {% block body %}
-BLOG
+<main>
+    <!-- Section 1 - Accueil -->
+    <section id="accueil" class="parallax parallax-1 home-section">
+      <!-- Image des accolades -->
+      <div class="image-container">
+        <img src="images/accolades.png" alt="Accolades" loading="lazy">
+        <div class="centered-text">
+          <p>Bonjour, je m'appelle Aurore,</p>
+          <h1>DÉVELOPPEUSE WEB</h1>
+          <p>je suis actuellement en reconversion professionnelle <br> et <strong>recherche activement une alternance</strong> pour <br> mettre en pratique mes nouvelles compétences <br> en front et backend.</p>
+          <div class="button-container justify-content-center">
+            <div>
+              <a href="download.php" download>
+                  <button class="btn">Téléchargez mon CV</button>
+              </a>      
+            </div>
+            <div>
+              <a href="#contact">
+                  <button class="btn">Contactez-moi!</button>
+              </a>
+            </div>
+          </div>   
+        </div>     
+      </div>
+    </section>
+
+    <!-- Section 2 - Compétences -->
+    <section id="competences" class="parallax parallax-1 skills-section">
+      <h1>Compétences</h1>
+      <div class="skills">
+        <!-- HTML -->
+        <div class="skill-item">
+          <i class="fab fa-html5"></i>
+          <h3>HTML</h3>
+          <p>Création de structures web sémantiques et conformes aux normes.</p>
+        </div>
+        <!-- CSS -->
+        <div class="skill-item">
+          <i class="fab fa-css3-alt"></i>
+          <h3>CSS</h3>
+          <p>Design responsive, animations modernes et utilisation de frameworks CSS.</p>
+        </div>
+        <!-- JavaScript -->
+        <div class="skill-item">
+          <i class="fab fa-js"></i>
+          <h3>JavaScript</h3>
+          <p>Interactions dynamiques, manipulation du DOM et programmation orientée objet.</p>
+        </div>
+        <!-- PHP -->
+        <div class="skill-item">
+          <i class="fab fa-php"></i>
+          <h3>PHP</h3>
+          <p>Création de backends robustes, gestion des données et intégration serveur.</p>
+        </div>
+        <!-- SQL -->
+        <div class="skill-item">
+          <i class="fas fa-database"></i>
+          <h3>SQL</h3>
+          <p>Conception, gestion et optimisation de bases de données relationnelles.</p>
+        </div>
+        <!-- GitHub -->
+        <div class="skill-item">
+          <i class="fab fa-github"></i>
+          <h3>GitHub</h3>
+          <p>Gestion de version, collaboration en équipe et déploiement de projets.</p>
+        </div>
+        <!-- Figma -->
+        <div class="skill-item">
+          <i class="fab fa-figma"></i>
+          <h3>Figma</h3>
+          <p>Conception d'interfaces utilisateur intuitives et prototypage rapide.</p>
+        </div>
+        <!-- Gestion de projets -->
+        <div class="skill-item">
+          <i class="fas fa-tasks"></i>
+          <h3>Gestion de Projets</h3>
+          <p>Organisation d'équipes, planification agile et suivi des livrables.</p>
+        </div>
+      </div>
+    </section>
+    
+      
+
+    <!-- Section 3 - Expérience -->
+    <section id="experience" class="parallax parallax-3 exp-section">
+      <h1>Expérience</h1>
+      <div class="experience">
+        <!-- Section infos1 - Timeline -->
+        <div class="infos infos1">
+          <h2>Timeline</h2>
+          <!-- Étape 1 -->
+          <div class="timeline-item">
+            <div class="timeline-content">
+              <h3>Cheffe de projets - WEBHELP GLOBAL</h3>
+              <span class="timeline-date">septembre 2020 - février 2024</span>
+              <p>Coordination d'ambassadeurs pour développer des actions philanthropiques et environnementales dans le cadre RSE de l'entreprise.</p>
+            </div>
+          </div>
+          <!-- Étape 2 -->
+          <div class="timeline-item">
+            <div class="timeline-content">
+              <h3>Responsable communicaton - WEBHELP GREECE</h3>
+              <span class="timeline-date">octobre 2019 - août 2020</span>
+              <p>Élaboration de stratégies de communication et organisation d'événements pour améliorer l'engagement des collaborateurs.</p>
+            </div>
+          </div>
+          <!-- Étape 3 -->
+          <div class="timeline-item">
+            <div class="timeline-content">
+              <h3>Responsable & rédactrice en chef - LEPETITJOURNAL.COM</h3>
+              <span class="timeline-date">novembre 2018 - octobre 2019</span>
+              <p>Rédaction de contenu destiné aux francophones vivant en Grèce, supervision d'une équipe de contributeurs et gestion du site et des réseaux sociaux</p>
+            </div>
+          </div>
+        </div>
+        <!-- Section infos2 - Diplômes -->
+        <div class="infos infos2 diploma-section">
+            <h2>Diplômes</h2>
+            <div class="diploma-grid">
+              <!-- Graduate Développeur Web -->
+              <div class="diploma-card">
+                <i class="fas fa-laptop-code"></i>
+                <h3>Graduate Développeur Web</h3>
+                <span class="date">2024 - 2025</span>
+                <p>En cours de formation avec Studi.com : langages de programmation, frameworks, déploiement.</p>
+              </div>
+              <!-- Master FLE -->
+              <div class="diploma-card">
+                <i class="fas fa-globe"></i>
+                <h3>Master FLE</h3>
+                <span class="date">2011 - 2012</span>
+                <p>Université d'Artois, spécialisé dans l'enseignement du français comme langue étrangère.</p>
+              </div>
+              <!-- Maîtrise de Droit -->
+              <div class="diploma-card">
+                <i class="fas fa-balance-scale"></i>
+                <h3>Maîtrise de Droit</h3>
+                <span class="date">2000 - 2004</span>
+                <p>Université de Picardie Jules Vernes, spécialisation en droit privé.</p>
+              </div>
+            </div>
+            <div>
+              <h2>Langues Étrangères</h2>
+              <div class="other-languages">
+                <div class="language">
+                  <span>Anglais</span>
+                  <div class="progress-bar">
+                    <div class="progress" style="width: 90%;"></div>
+                  </div>
+                  <p>Niveau : Maîtrise (C2)</p>
+                </div>
+                <div class="language">
+                  <span>Grec</span>
+                  <div class="progress-bar">
+                    <div class="progress" style="width: 75%;"></div>
+                  </div>
+                  <p>Niveau : Avancé (B2)</p>
+                </div>
+              </div>
+          </div>    
+        </div>    
+      </div>
+        <!-- Section other-exp - Langages et softs skills -->
+      <div class="other-exp">
+        <h2>Soft skills</h2>
+          <div class="soft-skills">
+            <div class="skills-grid row">
+              <div class="skill-card">
+                <i class="fas fa-users"></i>
+                <h4>Travail d'équipe</h4>
+              </div>
+              <div class="skill-card">
+                <i class="fas fa-lightbulb"></i>
+                <h4>Créativité</h4>
+              </div>
+              <div class="skill-card">
+                <i class="fas fa-clock"></i>
+                <h4>Gestion du temps</h4>
+              </div>
+              <div class="skill-card">
+                <i class="fas fa-comments"></i>
+                <h4>Communication</h4>
+              </div>
+              <div class="skill-card">
+                <i class="fas fa-handshake"></i>
+                <h4>Adaptabilité</h4>
+              </div>
+              <div class="skill-card">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <h4>Sens du détail</h4>
+              </div>
+            </div>
+          </div>
+      </div>
+    </section>
+
+    <!-- Section 4 - Contact -->
+    <section id="contact" class="parallax parallax-4 contact-section">
+
+    <form action="contact.php" method="post" id="contactForm">
+      <div>
+          <h1>Contactez-moi</h1>
+          <p>Pour en savoir plus sur mon parcours et mes disponibilités, veuillez remplir ce formulaire. Je ferai en sorte de vous répondre dans les 24h.</p>
+      </div>
+      <div class="separation"></div>
+      <div class="formulaire">
+          <div class="gauche">
+              <div class="groupe">
+                  <label for="lastname">Votre nom<sup>*</sup></label>
+                  <input type="text" name="lastname" id="lastname" placeholder="Entrez votre nom" required>
+              </div>
+              <div class="groupe">
+                  <label for="name">Votre prénom<sup>*</sup></label>
+                  <input type="text" name="name" id="name" placeholder="Entrez votre prénom" required>
+              </div>
+              <div class="groupe">
+                  <label for="email">Votre adresse email<sup>*</sup></label>
+                  <input type="email" name="email" id="email" placeholder="Entrez votre email" required>
+              </div>
+              <div class="groupe">
+                  <label for="tel">Votre téléphone<sup>*</sup></label>
+                  <input type="text" name="tel" id="tel" placeholder="Entrez votre téléphone" required>
+              </div>
+          </div>
+          <div class="droite">
+              <div class="groupe">
+                  <label for="subject">Sujet<sup>*</sup></label>
+                  <input type="text" id="subject" name="subject" placeholder="Entrez le sujet de votre message" required></input> <!-- Ajout du required ici -->
+              </div>
+              <div class="groupe">
+                  <label for="msg">Votre message<sup>*</sup></label>
+                  <textarea id="msg" name="msg" placeholder="Ecrivez votre message" maxlength="150" rows="13" required></textarea> <!-- Ajout du required ici -->
+              </div>
+          </div>
+      </div>
+      <div class="pied-formulaire">
+          <input class="btn btn-dark" type="submit" value="Envoyer le message">
+      </div>
+      <div id="notification" style="display:none; color: green;"></div>
+    </form>
+
+    </section>
+  </main>
 {% endblock %}
