--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -17,7 +17,7 @@
     </ul>
 
     <p>
-        <a class="btn btn-primary btn-sm" href="{{ path('article.new')}}">Créer un article</a>
+        <a class="btn" href="{{ path('article.new')}}">Créer un article</a>
     </p>
     <table class="table">
         <thead>
@@ -32,12 +32,12 @@
                 <td>
                     <a href="{{ path('article.show', {slug: article.slug}) }}">{{ article.title }}</a>
                 </td>
-                <td>
-                    <a class="btn btn-primary btn-sm" href="{{ path('article.edit', {id: article.id}) }}">Editer</a>
+                <td class="d-flex gap-1">
+                    <a class="btn" href="{{ path('article.edit', {id: article.id}) }}">Editer</a>
 
                     <form action="{{ path('article.delete', {id: article.id}) }}" method="post">
                         <input type="hidden" name="_method" value="DELETE">
-                        <button type="submit" class="btn btn-danger btn-sm">Supprimer</button>
+                        <button type="submit" class="btn">Supprimer</button>
                     </form>
                 </td>
             </tr>
