--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,10 +6,11 @@
         <meta name="description" content="Développeuse web en reconversion, recherche un stage en développement front et back-end. Découvrez mon CV et mes compétences.">
         <meta name="keywords" content="Développeur web, Développeuse web, Stage, Frontend, Backend, PHP, JavaScript">  
         <title>{% block title %}Code by Aurore{% endblock %}</title>
-        <link rel="stylesheet" href="css/styles.css">
-        <link rel="stylesheet" href="css/components.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/styles-mobile.css" media="screen and (max-width: 767px)">
+        <link rel="stylesheet" href="css/styles-tablet.css" media="screen and (min-width: 768px) and (max-width: 1024px)">
+        <link rel="stylesheet" href="css/styles-desktop.css" media="screen and (min-width: 1025px)">
+        <link rel="stylesheet" href="css/components.css">
         {% block stylesheets %}
         {% endblock %}
 
@@ -20,22 +21,30 @@
     <body>
         <header class="navbar">
             <div class="container">
-              <a class="logo">
-              <img src="images/logo AL dark.png" alt="Logo aurore le perff" loading="lazy" style="height: 60px;">
+              <a class="logo" href="{{ path('home') }}">
+              <img src="{{ asset('images/logo AL dark.png') }}" alt="Logo aurore le perff" loading="lazy">
               </a>
               <button class="burger" aria-label="Menu">
-              <span></span>
-              <span></span>
-              <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
               </button>
-              <nav class="nav-menu">
+                <div class="nav-menu">
                     <ul>
-                        <li><a class="{{ app.current_route == 'home' ? 'active' : ''}}" href="{{ path('home')}}">Accueil</a></li>
-                        <li><a class="{{ app.current_route == 'article.' ? 'active' : '' }}" href="{{ path('article.index')}}">Blog</a></li>
-                        <li><a href="#experience">à propos</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li>
+                            <a class="{{ app.current_route == 'home' ? 'active' : ''}}" href="{{ path('home')}}">Accueil</a>
+                        </li>
+                        <li>
+                            <a class="{{ app.current_route == 'article.' ? 'active' : '' }}" href="{{ path('article.index')}}">Blog</a>
+                        </li>
+                        <li>
+                            <a href="#experience">A propos</a>
+                        </li>
+                        <li>
+                            <a href="#contact">Contact</a>
+                        </li>
                     </ul>
-                </nav>
+                </div>
             </div>
         </header>
         <main>
