--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -17,27 +17,29 @@
     </ul>
 
     <p>
-        <a class="btn" href="{{ path('article.new')}}">Créer un article</a>
+        <a href="{{ path('article.new')}}">Créer un article</a>
     </p>
     <table class="table">
         <thead>
             <tr>
                 <th>Titre</th>
+                <th>Statut</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
             {% for article in articles %}
             <tr>
-                <td>
-                    <a href="{{ path('article.show', {slug: article.slug}) }}">{{ article.title }}</a>
-                </td>
+                <td>{{ article.title }}</td>
+                <td>{{ article.status }}</td>
                 <td class="d-flex gap-1">
-                    <a class="btn" href="{{ path('article.edit', {id: article.id}) }}">Editer</a>
+                    <a href="{{ path('article.show', {slug: article.slug}) }}">Consulter</a>
+
+                    <a href="{{ path('article.edit', {id: article.id}) }}">Editer</a>
 
                     <form action="{{ path('article.delete', {id: article.id}) }}" method="post">
                         <input type="hidden" name="_method" value="DELETE">
-                        <button type="submit" class="btn">Supprimer</button>
+                        <button type="submit">Supprimer</button>
                     </form>
                 </td>
             </tr>
