--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +7,9 @@
         <meta name="keywords" content="Développeur web, Développeuse web, Stage, Frontend, Backend, PHP, JavaScript">  
         <title>{% block title %}Code by Aurore{% endblock %}</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-        <link rel="stylesheet" href="css/styles-mobile.css" media="screen and (max-width: 767px)">
-        <link rel="stylesheet" href="css/styles-tablet.css" media="screen and (min-width: 768px) and (max-width: 1024px)">
-        <link rel="stylesheet" href="css/styles-desktop.css" media="screen and (min-width: 1025px)">
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/styles-header-footer.css">
+        <link rel="stylesheet" href="css/styles-home.css">
         <link rel="stylesheet" href="css/components.css">
         {% block stylesheets %}
         {% endblock %}
@@ -19,40 +19,36 @@
         {% endblock %}
     </head>
     <body>
-        <header class="navbar">
-            <div class="container">
-              <a class="logo" href="{{ path('home') }}">
-              <img src="{{ asset('images/logo AL dark.png') }}" alt="Logo aurore le perff" loading="lazy">
-              </a>
-              <button class="burger" aria-label="Menu">
+        <header class="header">
+                <img class="header__logo" src="{{ asset('images/logo AL dark.png') }}" alt="Logo aurore le perff, développeuse web" loading="lazy">
+
+            <button class="header__burger" aria-label="Menu">
                 <span></span>
                 <span></span>
                 <span></span>
-              </button>
-                <div class="nav-menu">
-                    <ul>
-                        <li>
-                            <a class="{{ app.current_route == 'home' ? 'active' : ''}}" href="{{ path('home')}}">Accueil</a>
-                        </li>
-                        <li>
-                            <a class="{{ app.current_route == 'article.' ? 'active' : '' }}" href="{{ path('article.index')}}">Blog</a>
-                        </li>
-                        <li>
-                            <a href="#experience">A propos</a>
-                        </li>
-                        <li>
-                            <a href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            </button>
+
+            <nav class="header__nav">
+                <ul class="header__list-links">
+                    <li class="header__li">
+                        <a class="{{ app.current_route == 'home' ? 'active' : ''}}" href="{{ path('home')}}">Accueil</a>
+                    </li>
+                    <li class="header__li">
+                        <a class="{{ app.current_route == 'article.' ? 'active' : '' }}" href="{{ path('article.index')}}">Blog</a>
+                    </li>
+                    <li class="header__li">
+                        <a href="#experience">A propos</a>
+                    </li>
+                    <li class="header__li">
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
         <main>
-            <div class="container">
-                {% include 'partials/_flash_messages.html.twig' %}
-                {% block body %}{% endblock %}
-            </div>
+            {% include 'partials/_flash_messages.html.twig' %}
+            {% block body %}{% endblock %}
         </main>
-        <script src="js/script.js"></script>
+        <script src="assets/js/script.js"></script>
     </body>
 </html>
