added sass on homepage

--- a/sass/abstracts/_variables.sass
+++ b/sass/abstracts/_variables.sass
@@ -5,3 +5,14 @@ $light-green: #38d6c2
 $white: #efe4d5
 $pink:#ea638c
 $dark-blue: #202c39
+$light-grey: #6d6d6d
+
+
+/* typography */
+$font-family: "Montserrat", sans-serif
+$font-size-h1: 2.5rem
+$font-size-h2: 2.2rem
+$font-size-h3: 1.8rem
+$font-size-h4: 1.5rem
+$font-size-p: 1rem
+$font-size-mini: 0.75rem
