--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,11 +18,12 @@ time, mark, audio, video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  box-sizing: border-box;
 }
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+footer, hgroup, menu, section {
   display: block;
 }
 
@@ -50,8 +51,13 @@ table {
 }
 
 /* colors */
+/* typography */
 body {
   background-color: #efe4d5;
+  font-family: "Montserrat", sans-serif;
+  color: #2b4743;
+  font-weight: 500;
+  font-size: 1rem;
 }
 
 a {
@@ -59,40 +65,186 @@ a {
   color: inherit;
 }
 
-.header {
-  top: 0;
-  left: 0;
-  width: 100%;
-  border-bottom: solid 1px #2b4743;
-  box-shadow: 0px 8px 8px -6px #2b4743;
-  z-index: 1000;
-  height: 5rem;
+.nav {
+  background-color: #efe4d5;
+  box-shadow: 0 2px 2px #6d6d6d;
+  position: relative;
+  z-index: 2;
+}
+.nav__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 1.875rem;
+  padding: 0.625rem;
+  margin: 0 1.25rem;
+  height: 4.375rem;
 }
-.header__logo {
-  width: 3.125rem;
-  height: 3.125rem;
-}
-.header__burger {
-  color: #2b4743;
-  background: none;
-  border: none;
+.nav__burger {
   cursor: pointer;
-  width: 25px;
-  height: 20px;
 }
-.header__burger span {
-  display: block;
-  height: 3px;
-  width: 100%;
-  background: #2b4743;
-  transition: transform 0.3s ease, opacity 0.3 ease;
+.nav__menu {
+  display: none;
+  position: absolute;
+  top: 4.375rem;
+  left: 0;
+  right: 0;
+  background-color: #efe4d5;
+  box-shadow: 0 2px 2px #2b4743;
+  padding: 0;
 }
-.header__nav {
+.nav__menu.show {
+  display: initial;
+}
+.nav__menu--item {
+  padding: 0.625rem 1.25rem;
+}
+.nav__menu--item:hover {
+  color: #38d6c2;
+  font-weight: 600;
+}
+
+@media screen and (min-width: 768px) {
+  .nav__container {
+    max-width: 748px;
+    margin: auto;
+  }
+  .nav__container .nav__burger {
+    display: none;
+  }
+  .nav__container .nav__menu {
+    display: initial;
+    position: static;
+    box-shadow: unset;
+  }
+  .nav__container .nav__menu .nav__menu--item {
+    display: inline-block;
+    border-top: 2px solid transparent;
+    border-bottom: 2px solid transparent;
+    line-height: 44px;
+  }
+  .nav__container .nav__menu .nav__menu--item:hover, .nav__container .nav__menu .nav__menu--item.active {
+    border-top: 3px solid #38d6c2;
+    border-bottom: 3px solid #38d6c2;
+    font-weight: 700;
+    color: #2b4743;
+  }
+}
+@media screen and (min-width: 992px) {
+  .nav__container {
+    max-width: 972px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .nav__container {
+    max-width: 1180px;
+  }
+}
+@media screen and (min-width: 1500px) {
+  .nav__container {
+    max-width: 1480px;
+  }
+}
+@media screen and (min-width: 1900px) {
+  .nav__container {
+    max-width: 1880px;
+  }
+}
+.hero {
   display: flex;
+  justify-content: center;
   align-items: center;
-  padding-right: 1.875rem;
+  min-height: 100vh;
+  text-align: center;
+  background-color: #efe4d5;
+  color: #efe4d5;
+  position: relative;
+  z-index: 1;
+}
+.hero__container {
+  position: relative;
+  background: #2b4743;
+  padding: 3.75rem;
+  max-width: 800px;
+  width: 80%;
+  margin: 0 auto;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.hero__subtitle {
+  font-weight: 600;
+  font-size: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+.hero__title {
+  font-weight: 600;
+  font-size: 2rem;
+  margin-bottom: 2.1875rem;
+}
+.hero__description {
+  font-weight: 400;
+  font-size: 1rem;
+  margin-bottom: 2rem;
+}
+.hero__avatar {
+  position: absolute;
+  top: -0.625rem;
+  right: -2.1875rem;
+  width: 8.125rem;
+  height: 8.125rem;
+  border-radius: 100%;
+  overflow: hidden;
+}
+.hero__avatar img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.hero__button-item {
+  margin: 0.625rem 0;
+}
+
+@media screen and (min-width: 768px) {
+  .hero__buttons {
+    flex-direction: row;
+    justify-content: center;
+  }
+  .hero__button-item {
+    margin: 0 10px;
+  }
+}
+.button, .button--secondary {
+  background-color: transparent;
+  border: solid 2px #efe4d5;
+  color: #efe4d5;
+  border-radius: 0.5rem;
+  padding: 0.5rem 0.75rem;
+  display: inline-flex;
+  align-items: center;
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+  cursor: pointer;
+}
+.button:hover, .button--secondary:hover {
+  border: solid 2px #38d6c2;
+  color: #38d6c2;
+}
+.button--secondary {
+  border: solid 2px #38d6c2;
+  background-color: transparent;
+}
+.button--secondary:hover {
+  border: solid 2px #efe4d5;
+}
+.button__icon {
+  width: 1.25rem;
+  height: 1.25rem;
+}
+.button__label {
+  font-weight: 400;
+  font-size: 0.75;
 }
