--- a/sass/base/_reset-custom.sass
+++ b/sass/base/_reset-custom.sass
@@ -2,6 +2,10 @@
 
 body
     background-color: var.$white
+    font-family: var.$font-family
+    color: var.$dark-green
+    font-weight: 500
+    font-size: var.$font-size-p
 
 a
     text-decoration: none
