--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,46 +6,53 @@
         <meta name="description" content="Développeuse web en reconversion, recherche un stage en développement front et back-end. Découvrez mon CV et mes compétences.">
         <meta name="keywords" content="Développeur web, Développeuse web, Stage, Frontend, Backend, PHP, JavaScript">  
         <title>{% block title %}Code by Aurore{% endblock %}</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Alice&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{{ asset('css/main.css') }}">
         {% block stylesheets %}
         {% endblock %}
 
         {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
+            {% block importmap %}{{ importmap('app')}}{% endblock %}
         {% endblock %}
+
     </head>
     <body>
-        <header class="header">
-            <img class="header__logo" src="{{ asset('assets/images/logo AL dark.png') }}" alt="Logo aurore le perff, développeuse web" loading="lazy">
-
-            <button class="header__burger" aria-label="Menu">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-
-            <nav class="header__nav">
-                <ul class="header__list-links">
-                    <li class="header__li">
+        <nav class="nav" id="main-navbar">
+            <div class="nav__container">
+                <a class="nav__logo" href="{{ path('home')}}">
+                    <img style="width: 50px;" src="{{ asset('assets/images/logo AL dark.png') }}" alt="Logo aurore le perff, développeuse web" loading="lazy">
+                </a>
+    
+                <span class="nav__burger" aria-label="Menu">
+                    <svg viewbox="0 0 100 80" width="30" height="30">
+                        <rect width="100" height="15" rx="8"></rect>
+                        <rect y="35" width="100" height="15" rx="8"></rect>
+                        <rect y="70" width="100" height="15" rx="8"></rect>
+                    </svg>
+                </span>
+    
+                <ul class="nav__menu">
+                    <li class="nav__menu--item active">
                         <a class="{{ app.current_route == 'home' ? 'active' : ''}}" href="{{ path('home')}}">Accueil</a>
                     </li>
-                    <li class="header__li">
+                    <li class="nav__menu--item">
                         <a class="{{ app.current_route == 'article.' ? 'active' : '' }}" href="{{ path('article.index')}}">Blog</a>
                     </li>
-                    <li class="header__li">
+                    <li class="nav__menu--item">
                         <a href="#experience">A propos</a>
                     </li>
-                    <li class="header__li">
+                    <li class="nav__menu--item">
                         <a href="#contact">Contact</a>
                     </li>
                 </ul>
-            </nav>
-        </header>
+            </div>
+        </nav>
         <main>
             {% include 'partials/_flash_messages.html.twig' %}
             {% block body %}{% endblock %}
         </main>
-        <script src="assets/js/script.js"></script>
+        <script src="{{ asset('js/navbar.js') }}"></script>
     </body>
 </html>
