--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,202 +3,33 @@
 
 {% block body %}
 <main>
-    <!-- Section 1 - Accueil -->
-    <section id="accueil" class="hero">
+    <!-- Section Hero -->
+    <section class="hero">
       <div class="hero__container">
-        <!-- Image des accolades -->
-        <img class="hero__img" src="images/accolades.png" alt="Accolades" loading="lazy">
-        <div class="hero__text">
-          <p>Bonjour, je m'appelle Aurore,</p>
-          <h1>Développeuse web</h1>
-          <p>je suis actuellement en reconversion professionnelle <br> et <strong>recherche activement une alternance</strong> pour <br> mettre en pratique mes nouvelles compétences <br> en front et backend.</p>
-          <div class="hero__buttons">
-            <div>
-              <a href="download.php" download>
-                  <button class="btn">Téléchargez mon CV</button>
-              </a>      
-            </div>
-            <div>
-              <a href="#contact">
-                  <button class="btn">Contactez-moi!</button>
-              </a>
-            </div>
-          </div>   
-        </div>     
+        <p class="hero__subtitle">Portfolio</p>
+        <h1 class="hero__title">Hello, je suis Aurore</h1>
+        <p class="hero__description js-home-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque maxime ipsam dignissimos, similique quod sit sed nulla! Cum ad corporis ut voluptas tempore molestiae vero fuga ullam similique, neque natus.</p>
+
+        <div class="hero__buttons">
+          <a class="hero__button-item button" href="/portfolio.html">
+            <svg style="width: 20px;" class="button__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"></path></svg>
+            <span class="button__label">Voir les projets</span>
+          </a>
+          
+          <a class="hero__button-item button--secondary" href="" class="js-home-profil-url" target="_blank">
+              <svg style="width: 20px;" class="button__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M5.88401 18.6533C5.58404 18.4526 5.32587 18.1975 5.0239 17.8369C4.91473 17.7065 4.47283 17.1524 4.55811 17.2583C4.09533 16.6833 3.80296 16.417 3.50156 16.3089C2.9817 16.1225 2.7114 15.5499 2.89784 15.0301C3.08428 14.5102 3.65685 14.2399 4.17672 14.4263C4.92936 14.6963 5.43847 15.1611 6.12425 16.0143C6.03025 15.8974 6.46364 16.441 6.55731 16.5529C6.74784 16.7804 6.88732 16.9182 6.99629 16.9911C7.20118 17.1283 7.58451 17.1874 8.14709 17.1311C8.17065 16.7489 8.24136 16.3783 8.34919 16.0358C5.38097 15.3104 3.70116 13.3952 3.70116 9.63971C3.70116 8.40085 4.0704 7.28393 4.75917 6.3478C4.5415 5.45392 4.57433 4.37284 5.06092 3.15636C5.1725 2.87739 5.40361 2.66338 5.69031 2.57352C5.77242 2.54973 5.81791 2.53915 5.89878 2.52673C6.70167 2.40343 7.83573 2.69705 9.31449 3.62336C10.181 3.41879 11.0885 3.315 12.0012 3.315C12.9129 3.315 13.8196 3.4186 14.6854 3.62277C16.1619 2.69 17.2986 2.39649 18.1072 2.52651C18.1919 2.54013 18.2645 2.55783 18.3249 2.57766C18.6059 2.66991 18.8316 2.88179 18.9414 3.15636C19.4279 4.37256 19.4608 5.45344 19.2433 6.3472C19.9342 7.28337 20.3012 8.39208 20.3012 9.63971C20.3012 13.3968 18.627 15.3048 15.6588 16.032C15.7837 16.447 15.8496 16.9105 15.8496 17.4121C15.8496 18.0765 15.8471 18.711 15.8424 19.4225C15.8412 19.6127 15.8397 19.8159 15.8375 20.1281C16.2129 20.2109 16.5229 20.5077 16.6031 20.9089C16.7114 21.4504 16.3602 21.9773 15.8186 22.0856C14.6794 22.3134 13.8353 21.5538 13.8353 20.5611C13.8353 20.4708 13.836 20.3417 13.8375 20.1145C13.8398 19.8015 13.8412 19.599 13.8425 19.4094C13.8471 18.7019 13.8496 18.0716 13.8496 17.4121C13.8496 16.7148 13.6664 16.2602 13.4237 16.051C12.7627 15.4812 13.0977 14.3973 13.965 14.2999C16.9314 13.9666 18.3012 12.8177 18.3012 9.63971C18.3012 8.68508 17.9893 7.89571 17.3881 7.23559C17.1301 6.95233 17.0567 6.54659 17.199 6.19087C17.3647 5.77663 17.4354 5.23384 17.2941 4.57702L17.2847 4.57968C16.7928 4.71886 16.1744 5.0198 15.4261 5.5285C15.182 5.69438 14.8772 5.74401 14.5932 5.66413C13.7729 5.43343 12.8913 5.315 12.0012 5.315C11.111 5.315 10.2294 5.43343 9.40916 5.66413C9.12662 5.74359 8.82344 5.69492 8.57997 5.53101C7.8274 5.02439 7.2056 4.72379 6.71079 4.58376C6.56735 5.23696 6.63814 5.77782 6.80336 6.19087C6.94565 6.54659 6.87219 6.95233 6.61423 7.23559C6.01715 7.8912 5.70116 8.69376 5.70116 9.63971C5.70116 12.8116 7.07225 13.9683 10.023 14.2999C10.8883 14.3971 11.2246 15.4769 10.5675 16.0482C10.3751 16.2156 10.1384 16.7802 10.1384 17.4121V20.5611C10.1384 21.5474 9.30356 22.2869 8.17878 22.09C7.63476 21.9948 7.27093 21.4766 7.36613 20.9326C7.43827 20.5204 7.75331 20.2116 8.13841 20.1276V19.1381C7.22829 19.1994 6.47656 19.0498 5.88401 18.6533Z"></path></svg>
+              <span class="button__label">Accéder à mon Github</span>
+          </a>
+        </div>
+
+        <div class="hero__avatar">
+            <img class="js-home-avatar" src="https://picsum.photos/200" aria-disabled="true">
+        </div>
       </div>
     </section>
 
-    <!-- Section 2 - Compétences -->
-    <section id="competences" class="skills">
-      <h1>Compétences</h1>
-      <div class="skills__container">
-        <!-- HTML -->
-        <div class="skill__item">
-          <i class="fab fa-html5"></i>
-          <h3>HTML</h3>
-          <p>Création de structures web sémantiques et conformes aux normes.</p>
-        </div>
-        <!-- CSS -->
-        <div class="skill__item">
-          <i class="fab fa-css3-alt"></i>
-          <h3>CSS</h3>
-          <p>Design responsive, animations modernes et utilisation de frameworks CSS.</p>
-        </div>
-        <!-- JavaScript -->
-        <div class="skill__item">
-          <i class="fab fa-js"></i>
-          <h3>JavaScript</h3>
-          <p>Interactions dynamiques, manipulation du DOM et programmation orientée objet.</p>
-        </div>
-        <!-- PHP -->
-        <div class="skill__item">
-          <i class="fab fa-php"></i>
-          <h3>PHP</h3>
-          <p>Création de backends robustes, gestion des données et intégration serveur.</p>
-        </div>
-        <!-- SQL -->
-        <div class="skill__item">
-          <i class="fas fa-database"></i>
-          <h3>SQL</h3>
-          <p>Conception, gestion et optimisation de bases de données relationnelles.</p>
-        </div>
-        <!-- GitHub -->
-        <div class="skill__item">
-          <i class="fab fa-github"></i>
-          <h3>GitHub</h3>
-          <p>Gestion de version, collaboration en équipe et déploiement de projets.</p>
-        </div>
-        <!-- Figma -->
-        <div class="skill__item">
-          <i class="fab fa-figma"></i>
-          <h3>Figma</h3>
-          <p>Conception d'interfaces utilisateur intuitives et prototypage rapide.</p>
-        </div>
-        <!-- Gestion de projets -->
-        <div class="skill__item">
-          <i class="fas fa-tasks"></i>
-          <h3>Gestion de Projets</h3>
-          <p>Organisation d'équipes, planification agile et suivi des livrables.</p>
-        </div>
-      </div>
-    </section>
     
-      
-
-    <!-- Section 3 - Expérience -->
-    <section id="experience" class="parallax parallax-3 experience">
-      <h1>Expérience</h1>
-      <div class="experience__pro">
-        <!-- Section infos1 - Timeline -->
-        <div class="infos timeline">
-          <h2>Timeline</h2>
-          <!-- Étape 1 -->
-          <div class="timeline-item">
-            <div class="timeline-content">
-              <h3>Cheffe de projets - WEBHELP GLOBAL</h3>
-              <span class="timeline-date">septembre 2020 - février 2024</span>
-              <p>Coordination d'ambassadeurs pour développer des actions philanthropiques et environnementales dans le cadre RSE de l'entreprise.</p>
-            </div>
-          </div>
-          <!-- Étape 2 -->
-          <div class="timeline-item">
-            <div class="timeline-content">
-              <h3>Responsable communicaton - WEBHELP GREECE</h3>
-              <span class="timeline-date">octobre 2019 - août 2020</span>
-              <p>Élaboration de stratégies de communication et organisation d'événements pour améliorer l'engagement des collaborateurs.</p>
-            </div>
-          </div>
-          <!-- Étape 3 -->
-          <div class="timeline-item">
-            <div class="timeline-content">
-              <h3>Responsable & rédactrice en chef - LEPETITJOURNAL.COM</h3>
-              <span class="timeline-date">novembre 2018 - octobre 2019</span>
-              <p>Rédaction de contenu destiné aux francophones vivant en Grèce, supervision d'une équipe de contributeurs et gestion du site et des réseaux sociaux</p>
-            </div>
-          </div>
-        </div>
-        <!-- Section infos2 - Diplômes -->
-        <div class="infos diploma">
-            <h2>Diplômes</h2>
-            <div class="diploma__grid">
-              <!-- Graduate Développeur Web -->
-              <div class="diploma__card">
-                <i class="fas fa-laptop-code"></i>
-                <h3>Graduate Développeur Web</h3>
-                <span class="date">2024 - 2025</span>
-                <p>En cours de formation avec Studi.com : langages de programmation, frameworks, déploiement.</p>
-              </div>
-              <!-- Master FLE -->
-              <div class="diploma__card">
-                <i class="fas fa-globe"></i>
-                <h3>Master FLE</h3>
-                <span class="date">2011 - 2012</span>
-                <p>Université d'Artois, spécialisé dans l'enseignement du français comme langue étrangère.</p>
-              </div>
-              <!-- Maîtrise de Droit -->
-              <div class="diploma__card">
-                <i class="fas fa-balance-scale"></i>
-                <h3>Maîtrise de Droit</h3>
-                <span class="date">2000 - 2004</span>
-                <p>Université de Picardie Jules Vernes, spécialisation en droit privé.</p>
-              </div>
-            </div>
-            <div>
-              <h2>Langues Étrangères</h2>
-              <div class="languages">
-                <div class="language__item">
-                  <span>Anglais</span>
-                  <div class="language__progress-bar">
-                    <div class="language__percent" style="width: 90%;"></div>
-                  </div>
-                  <p>Niveau : Maîtrise (C2)</p>
-                </div>
-                <div class="language__item">
-                  <span>Grec</span>
-                  <div class="language__progress-bar">
-                    <div class="language__percent" style="width: 75%;"></div>
-                  </div>
-                  <p>Niveau : Avancé (B2)</p>
-                </div>
-              </div>
-          </div>    
-        </div>    
-      </div>
-        <!-- Section other-exp - Langages et softs skills -->
-      <div class="other-exp">
-        <h2>Soft skills</h2>
-          <div class="soft-skills">
-            <div class="skills-grid row">
-              <div class="skill-card">
-                <i class="fas fa-users"></i>
-                <h4>Travail d'équipe</h4>
-              </div>
-              <div class="skill-card">
-                <i class="fas fa-lightbulb"></i>
-                <h4>Créativité</h4>
-              </div>
-              <div class="skill-card">
-                <i class="fas fa-clock"></i>
-                <h4>Gestion du temps</h4>
-              </div>
-              <div class="skill-card">
-                <i class="fas fa-comments"></i>
-                <h4>Communication</h4>
-              </div>
-              <div class="skill-card">
-                <i class="fas fa-handshake"></i>
-                <h4>Adaptabilité</h4>
-              </div>
-              <div class="skill-card">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <h4>Sens du détail</h4>
-              </div>
-            </div>
-          </div>
-      </div>
-    </section>
-
-    <!-- Section 4 - Contact -->
+    <!-- Section Contact -->
     <section id="contact" class="parallax parallax-4 contact-section">
 
     <form action="contact.php" method="post" id="contactForm">
