--- a/public/css/main.css
+++ b/public/css/main.css
@@ -108,21 +108,27 @@ a {
     max-width: 748px;
     margin: auto;
   }
-  .nav__container .nav__burger {
+  .nav__burger {
     display: none;
   }
-  .nav__container .nav__menu {
+  .nav__menu {
     display: initial;
     position: static;
     box-shadow: unset;
   }
-  .nav__container .nav__menu .nav__menu--item {
+  .nav__menu .nav__menu--item {
     display: inline-block;
     border-top: 2px solid transparent;
     border-bottom: 2px solid transparent;
     line-height: 44px;
   }
-  .nav__container .nav__menu .nav__menu--item:hover, .nav__container .nav__menu .nav__menu--item.active {
+  .nav__menu .nav__menu--item:hover {
+    border-top: 3px solid #38d6c2;
+    border-bottom: 3px solid #38d6c2;
+    font-weight: 700;
+    color: #2b4743;
+  }
+  .nav__menu .nav__menu--item .nav__menu--item a.active {
     border-top: 3px solid #38d6c2;
     border-bottom: 3px solid #38d6c2;
     font-weight: 700;
@@ -149,11 +155,56 @@ a {
     max-width: 1880px;
   }
 }
+.footer {
+  background: #2b4743;
+  color: #efe4d5;
+  padding: 1rem 2rem;
+  text-align: center;
+}
+.footer__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+@media (min-width: 768px) {
+  .footer__container {
+    flex-direction: row;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+}
+.footer__container-logo {
+  width: 3.125rem;
+}
+.footer .footer__list-links {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 0;
+  margin: 0;
+}
+@media (min-width: 768px) {
+  .footer .footer__list-links {
+    flex-direction: row;
+  }
+}
+.footer .footer__list--item a {
+  color: #efe4d5;
+  font-size: 0.75rem;
+  transition: color 0.3s ease;
+}
+.footer .footer__list--item a:hover, .footer .footer__list--item a.active {
+  color: #38d6c2;
+}
+
 .hero {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 80vh;
   text-align: center;
   background-color: #efe4d5;
   color: #efe4d5;
@@ -215,6 +266,99 @@ a {
   }
   .hero__button-item {
     margin: 0 10px;
+  }
+}
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 80vh;
+  text-align: center;
+  background-color: #efe4d5;
+  color: #efe4d5;
+  position: relative;
+  margin-bottom: 1.875rem;
+}
+.main__container {
+  position: relative;
+  background: #2b4743;
+  padding: 3.75rem;
+  max-width: 800px;
+  width: 80%;
+  margin: 0 auto;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.main__container-title {
+  font-weight: 600;
+  font-size: 1.8rem;
+  margin-bottom: 2.1875rem;
+}
+.main__projects {
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+  width: 100%;
+}
+.main__projects-item {
+  background: #efe4d5;
+  border-radius: 0.625rem;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  padding: 1.25rem;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  transition: transform 0.2s ease-in-out;
+  align-items: flex-start;
+}
+.main__projects-item:hover {
+  transform: translateY(-5px);
+}
+.main__projects .js-home-project-title {
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-bottom: 0.625rem;
+  color: #2b4743;
+}
+.main__projects .js-home-project-description {
+  font-size: 1rem;
+  color: #2b4743;
+  margin-bottom: 0.9375rem;
+}
+.main__projects .js-home-project-tags-container {
+  display: flex;
+  gap: 0.3125rem;
+  margin-bottom: 1.25rem;
+  align-items: center;
+}
+.main__projects .js-home-project-tags-container span {
+  background: #ea638c;
+  color: #efe4d5;
+  font-size: 0.75rem;
+  padding: 0.3125rem 0.625rem;
+  border-radius: 0.3125rem;
+}
+.main .button__icon {
+  color: #2b4743;
+  transform: scale(2);
+}
+.main__container-button {
+  margin-top: 2.1875rem;
+}
+
+@media screen and (min-width: 768px) {
+  .main__projects {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (min-width: 1024px) {
+  .main__projects {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 .button, .button--secondary {
