--- a/sass/abstracts/_mixins.sass
+++ b/sass/abstracts/_mixins.sass
@@ -1,3 +1,5 @@
+@use "../abstracts/variables" as var
+    
 @mixin font($font-size, $font-weight: 400)
     font-weight:$font-weight
     font-size: $font-size
@@ -7,3 +9,14 @@
     height: $size
     border-radius: 100%
     overflow: hidden
+
+@mixin container-style
+  display: flex
+  justify-content: center
+  align-items: center
+  min-height: 80vh
+  text-align: center
+  background-color: var.$white
+  color: var.$white
+  position: relative
+    
