--- a/sass/page/_about.sass
+++ b/sass/page/_about.sass
@@ -3,29 +3,23 @@
 @use "../abstracts/functions" as fct
     
 .hero
-    display: flex
-    justify-content: center
-    align-items: center
-    min-height: 100vh
-    text-align: center
-    background-color: var.$white
-    color: var.$white
-    position: relative // Pour que les éléments enfants soient positionnés par rapport à la section hero
-    z-index: 1 // Ajoute un z-index pour s'assurer que cette section reste au-dessus de la navbar, si nécessaire
+    @include mixin.container-style
+    
+    z-index: 1
 
 
     &__container
-        position: relative // Pour permettre le positionnement absolu de l'image à l'intérieur
+        position: relative
         background: var.$dark-green
         padding: fct.rem(60)
         max-width: 800px
         width: 80%
-        margin: 0 auto // Ceci va centrer horizontalement le conteneur
+        margin: 0 auto
         border-radius: 10px
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1)
-        display: flex // Ajoute display: flex pour pouvoir aligner les éléments à l'intérieur si nécessaire
-        flex-direction: column // Assure que les éléments sont disposés verticalement
-        justify-content: center // Aligne les éléments verticalement au centre
+        display: flex
+        flex-direction: column
+        justify-content: center
         align-items: center
 
     &__subtitle
@@ -35,7 +29,6 @@
     &__title
         @include mixin.font(2rem, 600)
         margin-bottom: fct.rem(35)
-
 
     &__description
         @include mixin.font(1rem)
@@ -53,7 +46,7 @@
             object-fit: cover
     
     &__button-item
-        margin: fct.rem(10) 0 // Ajoute un espace vertical entre les boutons
+        margin: fct.rem(10) 0
 
     
 @media screen and (min-width: 768px)
@@ -62,4 +55,89 @@
         justify-content: center
 
     .hero__button-item
-        margin: 0 10px // Espace horizontal entre les boutons
+        margin: 0 10px
+
+.main
+    @include mixin.container-style
+    margin-bottom: fct.rem(30)
+    
+
+    &__container
+        position: relative
+        background: var.$dark-green
+        padding: fct.rem(60)
+        max-width: 800px
+        width: 80%
+        margin: 0 auto
+        border-radius: 10px
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1)
+        display: flex
+        flex-direction: column
+        justify-content: center
+        align-items: center
+
+    &__container-title
+        @include mixin.font(1.8rem, 600)
+        margin-bottom: fct.rem(35)
+    
+    &__projects
+        padding: 0
+        display: flex
+        flex-direction: column
+        gap: fct.rem(20)
+        width: 100%
+
+        &-item
+            background: var.$white
+            border-radius: fct.rem(10)
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1)
+            padding: fct.rem(20)
+            display: flex
+            flex-direction: column
+            position: relative
+            transition: transform 0.2s ease-in-out
+            align-items: flex-start
+
+            &:hover
+                transform: translateY(-5px)
+
+        .js-home-project-title
+            font-size: fct.rem(20)
+            font-weight: 600
+            margin-bottom: fct.rem(10)
+            color: var.$dark-green
+        
+        .js-home-project-description
+            font-size: fct.rem(16)
+            color: var.$dark-green
+            margin-bottom: fct.rem(15)
+            
+        .js-home-project-tags-container
+            display: flex
+            gap: fct.rem(5)
+            margin-bottom: fct.rem(20)
+            align-items: center
+
+            span
+                background: var.$pink
+                color: var.$white
+                font-size: fct.rem(12)
+                padding: fct.rem(5) fct.rem(10)
+                border-radius: fct.rem(5)
+        
+    .button__icon
+        color: var.$dark-green
+        transform: scale(2)
+        
+        
+    &__container-button
+        margin-top: fct.rem(35)
+
+// Responsive : affichage en grille sur desktop
+@media screen and (min-width: 768px)
+    .main__projects
+        grid-template-columns: repeat(3, 1fr)
+
+@media screen and (min-width: 1024px)
+    .main__projects
+        grid-template-columns: repeat(3, 1fr)
