sass for blog page

--- a/sass/abstracts/_variables.sass
+++ b/sass/abstracts/_variables.sass
@@ -5,14 +5,20 @@ $light-green: #38d6c2
 $white: #efe4d5
 $pink:#ea638c
 $dark-blue: #202c39
-$light-grey: #6d6d6d
+$light-grey: #d5d5d5
 
 
 /* typography */
-$font-family: "Montserrat", sans-serif
 $font-size-h1: 2.5rem
 $font-size-h2: 2.2rem
 $font-size-h3: 1.8rem
 $font-size-h4: 1.5rem
 $font-size-p: 1rem
 $font-size-mini: 0.75rem
+
+$primary-color: #38d6c2
+$secondary-color: #ea638c
+$background-color: $white
+$text-color: #2b4743
+$font-family: "Montserrat", sans-serif
+
