--- a/sass/base/_reset-custom.sass
+++ b/sass/base/_reset-custom.sass
@@ -1,11 +1,16 @@
 @use "../abstracts/variables" as var
 
 body
-    background-color: var.$white
+    background-color: var.$background-color
     font-family: var.$font-family
-    color: var.$dark-green
+    color: var.$text-color
     font-weight: 500
     font-size: var.$font-size-p
+    margin: 0
+    padding: 0
+
+h1, h2, h3, h4
+    font-weight: bold
 
 a
     text-decoration: none
