--- a/public/css/main.css
+++ b/public/css/main.css
@@ -58,6 +58,12 @@ body {
   color: #2b4743;
   font-weight: 500;
   font-size: 1rem;
+  margin: 0;
+  padding: 0;
+}
+
+h1, h2, h3, h4 {
+  font-weight: bold;
 }
 
 a {
@@ -67,7 +73,7 @@ a {
 
 .nav {
   background-color: #efe4d5;
-  box-shadow: 0 2px 2px #6d6d6d;
+  box-shadow: 0 2px 2px #d5d5d5;
   position: relative;
   z-index: 2;
 }
@@ -359,6 +365,122 @@ a {
 @media screen and (min-width: 1024px) {
   .main__projects {
     grid-template-columns: repeat(3, 1fr);
+  }
+}
+.blog {
+  width: 90%;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 20px 0;
+}
+
+.blog__filters {
+  display: flex;
+  justify-content: space-between;
+  gap: 1.25rem;
+  margin-bottom: 1.875rem;
+}
+.blog__filters select {
+  padding: 8px;
+  font-size: 1rem;
+  border: 2px solid #38d6c2;
+  border-radius: 5px;
+  color: #2b4743;
+}
+
+.blog__articles {
+  display: block;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.blog__article {
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 0.625rem;
+  margin-bottom: 20px;
+}
+.blog__article .blog__article-header {
+  margin-bottom: 15px;
+}
+.blog__article .blog__article-header .title {
+  font-size: 1.6rem;
+  color: #38d6c2;
+  text-decoration: none;
+}
+.blog__article .blog__article-header .category {
+  font-size: 1rem;
+  color: #ea638c;
+}
+
+.blog__article-meta {
+  font-size: 1rem;
+  color: #2b4743;
+  margin-bottom: 15px;
+}
+
+.blog__article-separator {
+  height: 1px;
+  background-color: #d5d5d5;
+  margin: 15px 0;
+}
+
+.blog__article-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.blog__article-footer .date {
+  font-size: 0.9rem;
+  color: #888;
+}
+.blog__article-footer .tags {
+  display: flex;
+  gap: 10px;
+}
+.blog__article-footer .tags span {
+  background-color: #ea638c;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 20px;
+  font-size: 0.9rem;
+  cursor: pointer;
+}
+.blog__article-footer .tags span:hover {
+  background-color: #38d6c2;
+}
+
+@media (min-width: 768px) {
+  .blog__filters {
+    width: 70%;
+    margin: 0 auto;
+    justify-content: center;
+    gap: 1.875rem;
+  }
+  .blog__articles {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 1.875rem;
+  }
+  .blog__article {
+    padding: 25px;
+  }
+  .pagination a {
+    font-size: 1.1rem;
+    padding: 10px 20px;
+  }
+}
+@media (min-width: 1024px) {
+  .blog {
+    width: 80%;
+  }
+  .blog__article {
+    padding: 30px;
+  }
+  .pagination a {
+    font-size: 1.2rem;
+    padding: 12px 25px;
   }
 }
 .button, .button--secondary {
