--- a/sass/abstracts/_mixins.sass
+++ b/sass/abstracts/_mixins.sass
@@ -20,3 +20,8 @@
   color: var.$white
   position: relative
     
+@mixin flex-center($flex-center)
+    display: flex
+    justify-content: center
+    align-items: center
+
