--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -12,8 +12,9 @@
 
          {{ form_row(form.title) }}
          {{ form_row(form.slug) }}
-         {{ form_row(form.content) }}
          {{ form_row(form.category) }}
+         {{ form_row(form.metaDescription) }}
+         {{ form_row(form.content) }}
          {{ form_row(form.published_at) }}
          {{ form_row(form.save, { 'label': 'Modifier l\'article' }) }}
 
